# vda5050_mvp

./: .gitignore  README.md  docker-compose.yml  plan.md  pyproject.toml
.claude/skills/vda5050/: SKILL.md  vda5050-terminologies.md  vda5050-v2.1.0-overview.md
diagrams/: 01_client_startup.plantuml  02_client_disconnect_unexpected.plantuml  03_client_shutdown_graceful.plantuml  06_node_edge_traversal.plantuml  07_action_blocks_driving.plantuml  11_master_sends_cancel_order.plantuml  12_order_update_stitching.plantuml  13_state_heartbeat.plantuml
docs/: design_doc.md
docs/diagrams/: 04_master_assigns_order.plantuml  05_client_rejects_order.plantuml  08_order_completed.plantuml  09_master_receives_state_update.plantuml  10_master_handles_new_base_request.plantuml
docs/references/vda5050ClientMobileRobotDevice/: connection.yaml  device_status.yaml  factsheet.yaml  instant_action_status.yaml  order_status.yaml  state.yaml
docs/references/vda5050MasterDeviceController/: assign_order_request.yaml  fleet_roster.yaml  instant_action.yaml  master_connection.yaml
examples/: manual_cancel_check.py  run_demo.py
references/vda5050MasterDeviceController/: assignment_results.yaml  instant_action_results.yaml
tests/: test_models.py
tests/client/: test_actions.py  test_orders.py  test_vehicle.py
tests/master/: test_fleet.py  test_master.py  test_orders.py
vda5050_client/: actions.py  main.py  mqtt.py  orders.py  state.py  vehicle.py
vda5050_common/: models.py  mqtt.py  time.py  topics.py
vda5050_master/: fleet.py  main.py  master.py  mqtt.py  orders.py
(+10 files in other folders)
